--- a/style.css
+++ b/style.css
@@ -2602,3 +2602,94 @@ footer {
     font-size: 1rem;
   }
 }
+
+/* Preloader styles */
+.preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  transition: opacity 0.5s ease, visibility 0.5s ease;
+}
+
+.preloader.fade-out {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.loader {
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+
+.loader-circle {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border: 4px solid transparent;
+  border-radius: 50%;
+  animation: rotate 2s linear infinite;
+}
+
+.loader-circle:nth-child(1) {
+  border-top-color: #6b5ce7;
+  animation-delay: 0s;
+}
+
+.loader-circle:nth-child(2) {
+  border-right-color: #0099ff;
+  animation-delay: 0.5s;
+}
+
+.loader-circle:nth-child(3) {
+  border-bottom-color: #6b5ce7;
+  animation-delay: 1s;
+}
+
+.loader-circle:nth-child(4) {
+  border-left-color: #0099ff;
+  animation-delay: 1.5s;
+}
+
+.loader-logo {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 40px;
+  height: 40px;
+  opacity: 0;
+  animation: fadeInOut 2s ease-in-out infinite;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes fadeInOut {
+  0%, 100% {
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0.8);
+  }
+  50% {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+  }
+}
+
+/* Hide content until loaded */
+body.loading {
+  overflow: hidden;
+}
